<resources>
    <string name="app_name">NewsApp</string>
    <string name="login_title">News app</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="signup_title">Create Account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">SIGN UP</string>
    <string name="already_have_account">Already have an account? Log In</string>


</resources>